--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -7,6 +7,28 @@ html, body {
 }
 
 #content {
+	padding: 0px;
+	left: 0px;
+	top: 0px;
 	width: 100%;
 	height: 100%;
+	display: inline-block;
+}
+
+.spot {
+	display: inline-block;
+}
+
+@media (orientation: landscape) {
+  .spot {
+    width: 49%;
+    height: 100%;
+  }
+}
+
+@media (orientation: portrait) {
+  .spot {
+    width: 100%;
+    height: 49%;
+  }
 }
