--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -4,6 +4,7 @@ html, body {
 	top: 0px;
 	width: 100%;
 	height: 100%;
+	position: absolute;
 }
 
 #content {
@@ -13,10 +14,12 @@ html, body {
 	width: 100%;
 	height: 100%;
 	display: inline-block;
+	position: absolute;
 }
 
 .spot {
 	display: inline-block;
+	text-align: center;
 }
 
 @media (orientation: landscape) {
@@ -24,11 +27,20 @@ html, body {
     width: 49%;
     height: 100%;
   }
+  .image {
+  	max-height: 100%;
+  	width: auto;
+  }
 }
 
 @media (orientation: portrait) {
   .spot {
+
     width: 100%;
     height: 49%;
+  }
+  .image {
+  	max-width: 100%;
+  	height: auto;
   }
 }
