--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,46 +1,49 @@
 html, body {
 	padding: 0px;
+	margin: 0px;
 	left: 0px;
 	top: 0px;
 	width: 100%;
 	height: 100%;
 	position: absolute;
+	overflow: hidden;
 }
 
 #content {
 	padding: 0px;
+	margin: 0px;
 	left: 0px;
 	top: 0px;
 	width: 100%;
 	height: 100%;
-	display: inline-block;
 	position: absolute;
+	overflow: hidden;
+}
+
+#spot_0 {
+	background-image: url(/assets/img/sippy.png);
+}
+
+#spot_1 {
+	background-image: url(/assets/img/cheerios.png);		
 }
 
 .spot {
 	display: inline-block;
-	text-align: center;
+	background-size: cover;
+    background-repeat: no-repeat;
 }
 
 @media (orientation: landscape) {
   .spot {
-    width: 49%;
+    width: 50%;
     height: 100%;
-  }
-  .image {
-  	max-height: 100%;
-  	width: auto;
   }
 }
 
 @media (orientation: portrait) {
   .spot {
-
     width: 100%;
-    height: 49%;
-  }
-  .image {
-  	max-width: 100%;
-  	height: auto;
+    height: 50%;
   }
 }
