--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,3 +1,5 @@
+@import 'https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300';
+
 html, body {
 	padding: 0px;
 	margin: 0px;
@@ -9,7 +11,7 @@ html, body {
 	overflow: hidden;
 }
 
-#content {
+.section {
 	padding: 0px;
 	margin: 0px;
 	left: 0px;
@@ -18,6 +20,31 @@ html, body {
 	height: 100%;
 	position: absolute;
 	overflow: hidden;
+	/*background-color: #3C3C3C;*/
+}
+
+.selected {
+	border: 3px dotted #777777;
+}
+
+.imageBoard {
+	width: 70%;
+}
+
+#setup {
+	display: block;
+}
+
+#content {
+	display: none;
+}
+
+#controls {
+	position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
 }
 
 #spot_0 {
@@ -30,8 +57,10 @@ html, body {
 
 .spot {
 	display: inline-block;
-	background-size: cover;
+	/*background-size: cover;*/
     background-repeat: no-repeat;
+  	background-position: center;
+	background-size: cover;
 }
 
 @media (orientation: landscape) {
@@ -46,4 +75,8 @@ html, body {
     width: 99%;
     height: 49%;
   }
+}
+
+.thumbnail {
+	height: 100px;
 }
