--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -39,6 +39,14 @@ html, body {
 	display: none;
 }
 
+#videoSource {
+  position: absolute;
+  z-index:  10;
+  top: 33%;
+  left: 33%;
+  height: 33%;
+}
+
 #controls {
 	position: absolute;
     top: 50%;
@@ -73,8 +81,8 @@ html, body {
   }
 
   .two.spot {
-    width: 49%;
-    height: 99%;
+    width: 50%;
+    height: 100%;
   }
 
   .four.spot {
@@ -95,8 +103,8 @@ html, body {
   }
 
   .two.spot {
-    width: 99%;
-    height: 49%;
+    width: 100%;
+    height: 50%;
   }
 
   .four.spot {
